--- a/vidly/package.json
+++ b/vidly/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bcrypt": "^5.0.0",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.10",
+    "package-name": "^0.1.0",
     "prop-types": "^15.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
